--- a/Todo.txt
+++ b/Todo.txt
@@ -1,14 +1,8 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2580
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 ToDo:\
-- Subset of data (data is too big)\
-\'97 We can play with the data a bit\
-\'97 Explore the data\
-\'97 Loading the data}
+ToDo
+- Subset of data (data is too big
+-- We can play with the data a bit
+-- Explore the data
+-- Loading the data
 
 I see a lot of strange paths in here, do you guys see that as well?
+- Yeah. I think that is because I converted it from .rtf to .txt
