--- a/Programming/playing task 2.ipynb
+++ b/Programming/playing task 2.ipynb
@@ -93,7 +93,7 @@
     "#first row of 200 horizontal values \n",
     "print(\"first photo, first row with 200 horizontal values: \\n\",test_file[0,0])\n",
     "\n",
-    "#\n",
+    "#take 7th value\n",
     "print(\"first photo, first row, seventh value: \\n\",test_file[0,0,7])"
    ]
   },
