added some stuff

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,9 +1,9 @@
 ToDo
-- Subset of data (data is too big
+-- Subset of data (data is too big
 -- We can play with the data a bit
 -- Explore the data
 -- Loading the data
 -- Get the data on Sourcetree
+-- Installing keras (way to go for deep learning) if not using Colab
+-- How to handle the .npz file
 
-I see a lot of strange paths in here, do you guys see that as well?
-- Yeah. I think that is because I converted it from .rtf to .txt
