--- a/src/playground_Stefan.ipynb
+++ b/src/playground_Stefan.ipynb
@@ -35,12 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,59 +144,143 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import Pipeline"
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create different pipelines\n",
     "pipe_scale_svc = [(\"scale\", StandardScaler()), (\"svc\", SVC())]\n",
     "pipe_scale_pca095_svc = [(\"scale\", StandardScaler()), (\"reduce_dim\", PCA(.95)), (\"svc\", SVC())]\n",
-    "pipe_scale_pca090_svc = [(\"scale\", StandardScaler()), (\"reduce_dim\", PCA(.90)), (\"svc\", SVC())]\n",
+    "pipe_scale_pca090_svc = [(\"scale\", StandardScaler()), (\"reduce_dim\", PCA(.91)), (\"svc\", SVC())]\n",
+    "pipe_scale_pca085_svc = [(\"scale\", StandardScaler()), (\"reduce_dim\", PCA(.90)), (\"svc\", SVC())]\n",
+    "pipe_scale_pca080_svc = [(\"scale\", StandardScaler()), (\"reduce_dim\", PCA(.89)), (\"svc\", SVC())]\n",
     "\n",
-    "pipelines = [pipe_scale_svc, pipe_scale_pca_svc, pipe_scale_pca090_svc]"
+    "pipelines = [pipe_scale_svc, pipe_scale_pca_svc, pipe_scale_pca090_svc, pipe_scale_pca085_svc, pipe_scale_pca080_svc]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = []\n",
+    "evaluation = {}\n",
     "for i, item in enumerate(pipelines):\n",
     "    pipe = Pipeline(item)\n",
     "    pipe.fit(X_train, y_train)\n",
-    "    scores.append(pipe.score(X_test, y_test))"
+    "\n",
+    "    score = {}\n",
+    "    evaluation[i] = [item, {\"score\": pipe.score(X_test, y_test)}, {\"prediction\": pipe.predict(X_test)}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(columns = [\"pipe\", \"score\", \"predictions\"])\n",
+    "for i, item in enumerate(pipelines):\n",
+    "    pipe = Pipeline(item)\n",
+    "    pipe.fit(X_train, y_train)\n",
+    "    df.loc[i] = [\n",
+    "        str(item), \n",
+    "        pipe.score(X_test, y_test), \n",
+    "        pipe.predict(X_test)\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Variance Explained: SVC(), score: 0.848856664807585\nVariance Explained: PCA(n_components=0.95), score: 0.8637757947573899\nVariance Explained: PCA(n_components=0.9), score: 0.8863636363636364\nVariance Explained: PCA(n_components=0.85), score: 0.867122141662019\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(evaluation)):\n",
+    "    print(\"Variance Explained: {}, score: {}\".format(evaluation[i][0][1][1], evaluation[i][1][\"score\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "SVC()"
+       "{0: [[('scale', StandardScaler()), ('svc', SVC())],\n",
+       "  {'score': 0.848856664807585},\n",
+       "  {'prediction': array([ 6  ,  5  ,  10 , ...,  2  ,  4  ,  2  ])}],\n",
+       " 1: [[('scale', StandardScaler()),\n",
+       "   ('reduce_dim', PCA(n_components=0.95)),\n",
+       "   ('svc', SVC())],\n",
+       "  {'score': 0.8637757947573899},\n",
+       "  {'prediction': array([ 6  ,  5  ,  10 , ...,  2  ,  4  ,  2  ])}],\n",
+       " 2: [[('scale', StandardScaler()),\n",
+       "   ('reduce_dim', PCA(n_components=0.9)),\n",
+       "   ('svc', SVC())],\n",
+       "  {'score': 0.8863636363636364},\n",
+       "  {'prediction': array([ 6  ,  5  ,  10 , ...,  2  ,  4  ,  2  ])}],\n",
+       " 3: [[('scale', StandardScaler()),\n",
+       "   ('reduce_dim', PCA(n_components=0.85)),\n",
+       "   ('svc', SVC())],\n",
+       "  {'score': 0.867122141662019},\n",
+       "  {'prediction': array([ 6  ,  5  ,  10 , ...,  2  ,  4  ,  2  ])}]}"
       ]
      },
      "metadata": {},
-     "execution_count": 62
+     "execution_count": 164
     }
    ],
    "source": [
-    "# Try to access information of pipe"
+    "evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.8863636363636364"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 84
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +291,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 50
+     "execution_count": 67
     }
    ],
    "source": [
