--- a/src/playground_Stefan.ipynb
+++ b/src/playground_Stefan.ipynb
@@ -166,22 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluation = {}\n",
-    "for i, item in enumerate(pipelines):\n",
-    "    pipe = Pipeline(item)\n",
-    "    pipe.fit(X_train, y_train)\n",
-    "\n",
-    "    score = {}\n",
-    "    evaluation[i] = [item, {\"score\": pipe.score(X_test, y_test)}, {\"prediction\": pipe.predict(X_test)}]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +179,24 @@
     "        pipe.score(X_test, y_test), \n",
     "        pipe.predict(X_test)\n",
     "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "StandardScaler()\nPCA(n_components=0.8)\nSVC()\n"
+     ]
+    }
+   ],
+   "source": [
+    "for step in pipe.steps:\n",
+    "    print(step[1])"
    ]
   },
   {
@@ -216,39 +219,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{0: [[('scale', StandardScaler()), ('svc', SVC())],\n",
-       "  {'score': 0.848856664807585},\n",
-       "  {'prediction': array([ 6  ,  5  ,  10 , ...,  2  ,  4  ,  2  ])}],\n",
-       " 1: [[('scale', StandardScaler()),\n",
-       "   ('reduce_dim', PCA(n_components=0.95)),\n",
-       "   ('svc', SVC())],\n",
-       "  {'score': 0.8637757947573899},\n",
-       "  {'prediction': array([ 6  ,  5  ,  10 , ...,  2  ,  4  ,  2  ])}],\n",
-       " 2: [[('scale', StandardScaler()),\n",
-       "   ('reduce_dim', PCA(n_components=0.9)),\n",
-       "   ('svc', SVC())],\n",
-       "  {'score': 0.8863636363636364},\n",
-       "  {'prediction': array([ 6  ,  5  ,  10 , ...,  2  ,  4  ,  2  ])}],\n",
-       " 3: [[('scale', StandardScaler()),\n",
-       "   ('reduce_dim', PCA(n_components=0.85)),\n",
-       "   ('svc', SVC())],\n",
-       "  {'score': 0.867122141662019},\n",
-       "  {'prediction': array([ 6  ,  5  ,  10 , ...,  2  ,  4  ,  2  ])}]}"
-      ]
+       "                                                pipe     score  \\\n",
+       "0      [('scale', StandardScaler()), ('svc', SVC())]  0.848857   \n",
+       "1  [('scale', StandardScaler()), ('reduce_dim', P...  0.863776   \n",
+       "2  [('scale', StandardScaler()), ('reduce_dim', P...  0.886364   \n",
+       "3  [('scale', StandardScaler()), ('reduce_dim', P...  0.867122   \n",
+       "4  [('scale', StandardScaler()), ('reduce_dim', P...  0.837005   \n",
+       "\n",
+       "                                         predictions  \n",
+       "0  [6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...  \n",
+       "1  [6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...  \n",
+       "2  [6, 5, 10, 0, 3, 21, 10, 14, 3, 7, 8, 8, 17, 1...  \n",
+       "3  [6, 5, 10, 0, 3, 22, 20, 14, 3, 7, 8, 8, 21, 1...  \n",
+       "4  [6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pipe</th>\n      <th>score</th>\n      <th>predictions</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>[('scale', StandardScaler()), ('svc', SVC())]</td>\n      <td>0.848857</td>\n      <td>[6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>[('scale', StandardScaler()), ('reduce_dim', P...</td>\n      <td>0.863776</td>\n      <td>[6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>[('scale', StandardScaler()), ('reduce_dim', P...</td>\n      <td>0.886364</td>\n      <td>[6, 5, 10, 0, 3, 21, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>[('scale', StandardScaler()), ('reduce_dim', P...</td>\n      <td>0.867122</td>\n      <td>[6, 5, 10, 0, 3, 22, 20, 14, 3, 7, 8, 8, 21, 1...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>[('scale', StandardScaler()), ('reduce_dim', P...</td>\n      <td>0.837005</td>\n      <td>[6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 164
+     "execution_count": 230
     }
    ],
    "source": [
-    "evaluation"
+    "df"
    ]
   },
   {
