--- a/Programming/Exploring_data_task1.ipynb
+++ b/Programming/Exploring_data_task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "import sklearn \n",
     "\n",
-    "from sklearn.preprocessing import LabelBinarizer\n"
+    "from sklearn.preprocessing import LabelBinarizer"
    ]
   },
   {
