--- a/src/playground_Stefan.ipynb
+++ b/src/playground_Stefan.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -165,11 +165,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 35
     }
    ],
    "source": [
-    "# First pipeline\n",
+    "# Zeroeth pipeline\n",
     "pipeline = Pipeline([\n",
     "        (\"scale\", StandardScaler()),\n",
     "        (\"dim_red\", PCA()),\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -200,22 +200,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "dict_keys(['memory', 'steps', 'verbose', 'scale', 'dim_red', 'svc', 'scale__copy', 'scale__with_mean', 'scale__with_std', 'dim_red__copy', 'dim_red__iterated_power', 'dim_red__n_components', 'dim_red__random_state', 'dim_red__svd_solver', 'dim_red__tol', 'dim_red__whiten', 'svc__C', 'svc__break_ties', 'svc__cache_size', 'svc__class_weight', 'svc__coef0', 'svc__decision_function_shape', 'svc__degree', 'svc__gamma', 'svc__kernel', 'svc__max_iter', 'svc__probability', 'svc__random_state', 'svc__shrinking', 'svc__tol', 'svc__verbose'])"
+       "GridSearchCV(cv=5,\n",
+       "             estimator=Pipeline(steps=[('scale', StandardScaler()),\n",
+       "                                       ('dim_red', PCA()), ('svc', SVC())]),\n",
+       "             param_grid={'dim_red__n_components': [0.8, 1]})"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 33
     }
    ],
    "source": [
-    "pipeline.get_params().keys()"
+    "# First pipeline\n",
+    "pipeline = Pipeline([\n",
+    "        (\"scale\", StandardScaler()),\n",
+    "        (\"dim_red\", PCA()),\n",
+    "        (\"svc\", SVC())\n",
+    "    ])\n",
+    "param_grid = {\"dim_red__n_components\": [0.80, 1]}\n",
+    "CV = GridSearchCV(pipeline, param_grid, cv = 5)\n",
+    "# pipeline.get_params().keys() See all available parameters\n",
+    "CV.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy of 0.837005019520357 can be achieved with the following parameters: {'dim_red__n_components': 0.8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy of {} can be achieved with the following parameters: {}\".format(CV.score(X_test, y_test), CV.best_params_))"
    ]
   },
   {
@@ -432,43 +461,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                                                pipe     PCA     score  \\\n",
-       "0      [('scale', StandardScaler()), ('svc', SVC())]      []  0.848857   \n",
-       "1  [('scale', StandardScaler()), ('reduce_dim', P...  [0.95]  0.863776   \n",
-       "2  [('scale', StandardScaler()), ('reduce_dim', P...  [0.91]  0.878695   \n",
-       "3  [('scale', StandardScaler()), ('reduce_dim', P...      []  0.886364   \n",
-       "4  [('scale', StandardScaler()), ('reduce_dim', P...  [0.89]  0.882878   \n",
-       "\n",
-       "                                         predictions  \n",
-       "0  [6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...  \n",
-       "1  [6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...  \n",
-       "2  [6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...  \n",
-       "3  [6, 5, 10, 0, 3, 21, 10, 14, 3, 7, 8, 8, 17, 1...  \n",
-       "4  [6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pipe</th>\n      <th>PCA</th>\n      <th>score</th>\n      <th>predictions</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>[('scale', StandardScaler()), ('svc', SVC())]</td>\n      <td>[]</td>\n      <td>0.848857</td>\n      <td>[6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>[('scale', StandardScaler()), ('reduce_dim', P...</td>\n      <td>[0.95]</td>\n      <td>0.863776</td>\n      <td>[6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>[('scale', StandardScaler()), ('reduce_dim', P...</td>\n      <td>[0.91]</td>\n      <td>0.878695</td>\n      <td>[6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>[('scale', StandardScaler()), ('reduce_dim', P...</td>\n      <td>[]</td>\n      <td>0.886364</td>\n      <td>[6, 5, 10, 0, 3, 21, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>[('scale', StandardScaler()), ('reduce_dim', P...</td>\n      <td>[0.89]</td>\n      <td>0.882878</td>\n      <td>[6, 5, 10, 0, 3, 22, 10, 14, 3, 7, 8, 8, 17, 1...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+       "7172"
+      ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 44
     }
    ],
    "source": [
-    "df"
+    "len(df[\"predictions\"][0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
