--- a/src/playground_Stefan.ipynb
+++ b/src/playground_Stefan.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is Stefan's jupyter notebook to explore the data."
+    "This is Stefan's jupyter-notebook to explore the data."
    ]
   },
   {
