--- a/src/Random forest task 1.ipynb
+++ b/src/Random forest task 1.ipynb
@@ -124,6 +124,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number of actual values where we predict an r: {'x': 11, 'k': 70, 'w': 25, 'y': 32, 'u': 62, 'd': 6, 'v': 22}\n",
+      "\n",
+      "Incorrectly predicting these values: {'u': 26, 'l': 17, 'v': 1, 't': 3, 's': 2, 'i': 1, 'm': 1, 'w': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def define_alphabet():\n",
+    "    letters = {}\n",
+    "    for i in range(0, 26):\n",
+    "        letters[i] = chr(i+97)\n",
+    "    return letters\n",
+    "\n",
+    "letters = define_alphabet()\n",
+    "\n",
+    "# Why are Rs (=17) so bad?\n",
+    "## What should my Rs be?\n",
+    "letter_dic = {}\n",
+    "p = y_test[np.where(y_pred == 17)]\n",
+    "for item in p:\n",
+    "    if item not in letter_dic:\n",
+    "        if letters[item] not in letter_dic:\n",
+    "            letter_dic[letters[item]] = 1\n",
+    "        else:\n",
+    "            letter_dic[letters[item]] = letter_dic[letters[item]] + 1\n",
+    "#print(sum(letter_dic.values()))\n",
+    "letter_dic.pop(\"r\")\n",
+    "print(\"Number of actual values where we predict an r:\", letter_dic)\n",
+    "\n",
+    "# Which Rs are not predicted?\n",
+    "letter_dic = {}\n",
+    "p = y_pred[np.where(y_test == 17)]\n",
+    "for item in p:\n",
+    "    if item not in letter_dic:\n",
+    "        if letters[item] not in letter_dic:\n",
+    "            letter_dic[letters[item]] = 1\n",
+    "        else:\n",
+    "            letter_dic[letters[item]] = letter_dic[letters[item]] + 1\n",
+    "#print(sum(letter_dic.values()))\n",
+    "letter_dic.pop(\"r\")\n",
+    "print(\"\\nIncorrectly predicting these values:\", letter_dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Training set score: 1.0\n",
       "Test set score: 0.7930842163970998\n",
       "Best parameters: {'pca__n_components': 0.8500000000000001}\n"
@@ -178,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
