--- a/Notebooks/playground_Stefan_recovery.ipynb
+++ b/Notebooks/playground_Stefan_recovery.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +121,24 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import accuracy_score, precision_recall_fscore_support, confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(27455, 784)\n(1000, 784)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(X_train[:1000,:].shape)"
    ]
   },
   {
@@ -4596,8 +4614,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python395jvsc74a57bd09ff7ad65fd33a767da5485be53880310ae0b5bdc0d199936e60539568ae78205",
-   "display_name": "Python 3.9.5 64-bit"
+   "name": "python3",
+   "display_name": "Python 3.7.3 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4609,12 +4627,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.3"
   },
   "metadata": {
    "interpreter": {
     "hash": "9ff7ad65fd33a767da5485be53880310ae0b5bdc0d199936e60539568ae78205"
    }
+  },
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   }
  },
  "nbformat": 4,
