Saves to csv. Automatic path for files.

--- a/Notebooks/funWithNumpy.ipynb
+++ b/Notebooks/funWithNumpy.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [['12180513', '22180512', '22180712', '17180713', '22180719'], ['2423141613', '2423141613', '2423141613', '2423141613', '2423141613'], ['23201607', '03201607', '03201007', '23201016', '19201017'], ['2204042403', '2204180819', '2224180819', '2224040819', '2224140819'], ['201414', '201414', '211414', '211414', '211414'], ['2000070708', '1500070717', '1513070717', '1516070717', '2316070720'], ['1210232005', '1210232019', '1223232019', '1207232007', '2407231907'], ['18071908', '18071908', '18071908', '00071908', '08071924'], ['15182315', '15082315', '15080615', '15080615', '07080607'], ['1308111520', '0308112303', '0303112203', '0303112220', '0303112220']]"
+    "data2 = [['12180513', '22180512', '22180712', '17180713', '22180719'], ['2423141613', '2423141613', '2423141613', '2423141613', '2423141613'], ['23201607', '03201607', '03201007', '23201016', '19201017'], ['2204042403', '2204180819', '2224180819', '2224040819', '2224140819'], ['201414', '201414', '211414', '211414', '211414'], ['2000070708', '1500070717', '1513070717', '1516070717', '2316070720'], ['1210232005', '1210232019', '1223232019', '1207232007', '2407231907'], ['18071908', '18071908', '18071908', '00071908', '08071924'], ['15182315', '15082315', '15080615', '15080615', '07080607'], ['1308111520', '0308112303', '0303112203', '0303112220', '0303112220']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -281,8 +281,26 @@
     }
    ],
    "source": [
-    "for row in data:\n",
+    "for row in data2:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4\n5\n4\n5\n3\n5\n5\n4\n4\n5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in data:\n",
+    "    print(len(row))"
    ]
   },
   {
@@ -329,6 +347,104 @@
     "    for row in data:\n",
     "        w = csv.writer(f, dialect=\"excel\")\n",
     "        w.wirterow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [['12180513', '22180512', '22180712', '17180713', '22180719'],\n",
+    " ['2423141613', '2423141613', '2423141613', '2423141613', '2423141613'],\n",
+    " ['23201607', '03201607', '03201007', '23201016', '19201017'],\n",
+    " ['2204042403', '2204180819', '2224180819', '2224040819', '2224140819'],\n",
+    " ['201414', '201414', '211414', '211414', '211414'],\n",
+    " ['2000070708', '1500070717', '1513070717', '1516070717', '2316070720'],\n",
+    " ['1210232005', '1210232019', '1223232019', '1207232007', '2407231907'],\n",
+    " ['18071908', '18071908', '18071908', '00071908', '08071924'],\n",
+    " ['15182315', '15082315', '15080615', '15080615', '07080607'],\n",
+    " ['1308111520', '0308112303', '0303112203', '0303112220', '0303112220']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = \"/Users/stefanwinter/Local/ML_Challenge/data/predictions_all_images/preds.csv\"\n",
+    "open(file, \"a\").close()\n",
+    "\n",
+    "string = \"\"\n",
+    "\n",
+    "with open(file, \"w\") as f:\n",
+    "    n = numpy.array(data2)\n",
+    "    string = \"\"\n",
+    "    for i, row in enumerate(n):\n",
+    "        for i, element in enumerate(row):\n",
+    "            if i <= 4:\n",
+    "                string = string + element + \",\"\n",
+    "            else:\n",
+    "                string = string + element\n",
+    "        writer = csv.writer(f, delimiter = \" \", escapechar=' ', quoting=csv.QUOTE_NONE)\n",
+    "        writer.writerow([string])\n",
+    "        string = \"\"\n",
+    "    f.close\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        open(file, \"a\").close()\n",
+    "        with open(file, \"w\") as f:\n",
+    "            n = np.array([data])\n",
+    "            string = \"\"\n",
+    "            for entry in n:\n",
+    "                for i, row in enumerate(np.swapaxes(np.array(entry), 0, 1)):\n",
+    "                    if(i<4):\n",
+    "                        for k, element in enumerate(row):\n",
+    "                            if k >= 0:\n",
+    "                                string = string + element\n",
+    "                        string = string + \",\"\n",
+    "                    else:\n",
+    "                        for k, element in enumerate(row):\n",
+    "                            string = string + element\n",
+    "                        writer = csv.writer(f, delimiter = \" \", escapechar=' ', quoting=csv.QUOTE_NONE)\n",
+    "                        writer.writerow([string])\n",
+    "                        string = \"\"\n",
+    "            f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['12180513', '22180512', '22180712', '17180713', '22180719']\n['2423141613', '2423141613', '2423141613', '2423141613', '2423141613']\n['23201607', '03201607', '03201007', '23201016', '19201017']\n['2204042403', '2204180819', '2224180819', '2224040819', '2224140819']\n['201414', '201414', '211414', '211414', '211414']\n['2000070708', '1500070717', '1513070717', '1516070717', '2316070720']\n['1210232005', '1210232019', '1223232019', '1207232007', '2407231907']\n['18071908', '18071908', '18071908', '00071908', '08071924']\n['15182315', '15082315', '15080615', '15080615', '07080607']\n['1308111520', '0308112303', '0303112203', '0303112220', '0303112220']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in data2:\n",
+    "    print(row)"
    ]
   },
   {
